Fix: layout bg shift

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -126,21 +126,19 @@ body {
 
 /* background */
 .bg_logo {
-  width: 100%;
-  overflow: hidden;
-  min-height: 100%;
-  max-width: 100vw;
+  padding: 1rem;
+  width: min(35rem, 100%);
   position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
   animation: bg_breathe_animation 8s infinite ease;
   color: var(--black400);
   z-index: -1;
 }
 
 .bg_logo>svg {
-  width: min(35rem, 100%);
+  width: auto;
   height: auto;
 }
 
